--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,17 +33,17 @@
 
       <!-- Empty State -->
       @if (remotes().length === 0 && !isLoading()) {
-        <div class="empty-state">
-          <div class="empty-state-content">
+        <div class="no-remotes">
+          <div class="no-remotes-content">
             <div class="icon-container">
-              <img src="assets/rclone.svg" alt="Rclone Logo" class="empty-state-icon" />
+              <img src="assets/rclone.svg" alt="Rclone Logo" class="no-remotes-icon" />
             </div>
             <h2>RClone Manager</h2>
             <p>
               Easily manage your RClone remotes. If you're new to RClone, use "Add Quick Remote" for
               a fast and simple setup.
             </p>
-            <div class="empty-state-actions">
+            <div class="no-remotes-actions">
               <button matButton="filled" class="primary" (click)="openQuickAddRemoteModal()">
                 <mat-icon svgIcon="plus"></mat-icon>
                 Add Quick Remote
@@ -72,26 +72,16 @@
             >
             </app-general-overview>
           }
-          @case ('serve') {
-            <app-serve-overview
-              [remotes]="remotes()"
-              [runningServes]="runningServes()"
-              [actionInProgress]="actionInProgress()"
-              (remoteSelected)="selectRemote($event)"
-              (startJob)="startJob($event.type, $event.remoteName)"
-              (stopJob)="stopJob($event.type, $event.remoteName, $event.serveId)"
-            >
-            </app-serve-overview>
-          }
           @default {
             <app-app-overview
               [mode]="currentTab()"
               [remotes]="remotes()"
+              [runningServes]="runningServes()"
               [actionInProgress]="actionInProgress()"
               (remoteSelected)="selectRemote($event)"
               (openInFiles)="openRemoteInFiles($event, currentTab())"
               (startJob)="startJob($event.type, $event.remoteName)"
-              (stopJob)="stopJob($event.type, $event.remoteName)"
+              (stopJob)="stopJob($event.type, $event.remoteName, $event.serveId)"
             >
             </app-app-overview>
           }
